remove deprecates
- arithmetic operations removed
- arithmethic mode removed