@@ -1,7 +1,5 @@
 package com.github.chaosfirebolt.converter.testUtil;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class Constants {
@@ -10,5 +8,5 @@ public class Constants {
         //no instances allowed
     }
 
-    public static final List<String> FIELD_NAMES = Collections.unmodifiableList(Arrays.asList("romanRepresentation", "arabicRepresentation", "arithmeticMode"));
+    public static final List<String> FIELD_NAMES = List.of("romanRepresentation", "arabicRepresentation");
 }
